[tool.poetry]
name = "awsnap"
version = "1.3.8"
description = "AWSnap: an AWS Utility to help manage your projects and sso sessions."
authors = ["Aaron West <aphexlog@gmail.com>"]
repository = "https://github.com/aphexlog/AWSnap"
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34.36"
gitpython = "^3.1.41"
aws-cdk-lib = "^2.126.0"
boto3-stubs = "^1.34.36"
setuptools = "^69.0.3"

[tool.poetry.scripts]
awsnap = "awsnap.awsnap:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pyright]
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

[tool.isort]
atomic = true
profile = "black"
line_length = 88
skip_gitignore = true
